--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <h2 class="subtitle"><span class="image-background-2"></span> Видео</h2>
 <h2 class="subtitle"><span class="image-background-2"></span> Клипы</h2>
 <h2 class="subtitle"><span class="image-background-2"></span> Гифы</h2>
+
+<p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 <img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
 </div>
 
