--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <h2 class="subtitle"><span class="image-background-2"></span> Фото</h2>
 <h2 class="subtitle"><span class="image-background-2"></span> Друзья</h2>
 <h2 class="subtitle"><span class="image-background-2"></span> Блоги</h2>
+
+<p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 </div>
 
 <div class="button-item">
