--- a/index.html
+++ b/index.html
@@ -6,55 +6,77 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>mavantuominen</title>
 <link href="styles.css" rel="stylesheet">
+<link href="colorstyles.css" rel="stylesheet">
+<link href="iconstyles.css" rel="stylesheet">
 
 </head>
 
 <body>
 <div class="block-article">
 
-<h1 class="heading">mavantuominen</h1>
+<h1 class="heading position-center">mavantuominen</h1>
 
-<div class="color-div color-div-f5deb3 miniblock">
+<div class="background-color-f5deb3 color-block">
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
-<div class="color-div-f1f1f1 miniblock">
+<div class="background-color-f1f1f1 color-block">
 
-<h1 class="heading"><span class="image-background"></span> minu menu</h1>
-
-<p class="separator"></p>
-
-<h2 class="subtitle"><span class="image-background-2"></span> Информация</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Скиллы</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Социальные сети</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Мои фотогрфии</h2>
+<h1 class="heading"><span class="icon-mini-menu"></span> minu menu</h1>
 
 <p class="separator"></p>
 
-<div class="block-button">
+<h2 class="subtitle"><span class="icon-ul"></span> Информация</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Скиллы</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Социальные сети</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Мои фотогрфии</h2>
 
-<div class="button-item">
-<h2 class="subtitle"><span class="image-background-2"></span> Фото</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Друзья</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Блоги</h2>
+<p class="separator"></p>
 
+<!-- .............................. -->
+
+<div class="columns">
+
+<div class="column">
+<h2 class="subtitle"><span class="icon-ul"></span> Фото</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Друзья</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Блоги</h2>
+</div>
+
+<div class="column">
+<h2 class="subtitle"><span class="icon-ul"></span> Видео</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Клипы</h2>
+<h2 class="subtitle"><span class="icon-ul"></span> Гифы</h2>
+</div>
+
+</div>
+
+<p class="separator"></p>
+
+<!-- .............................. -->
+
+<div class="columns">
+
+<div class="column">
+<img src="les_derevia_sosna_171900_2160x3840.jpg" class="photo" alt="Картинку скушали пингвины">
+</div>
+
+<div class="column">
 <p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 </div>
 
-<div class="button-item">
-<h2 class="subtitle"><span class="image-background-2"></span> Видео</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Клипы</h2>
-<h2 class="subtitle"><span class="image-background-2"></span> Гифы</h2>
+</div>
 
 <p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-<img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
-</div>
 
-</div>
+<!-- .............................. -->
 
 <p class="separator"></p>
 
 <img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
+
+<blockquote class="quote">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
+
 </div>
 
 <blockquote class="quote">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</blockquote>
@@ -64,9 +86,9 @@
 <p class="separator"></p>
 
 <div class="paragraph">
-<ul class="list">
+<ul>
   <li>Первый пункт списка
-    <ul class="list">
+    <ul>
       <li>Подпункт 1</li>
       <li>Подпункт 2</li>
       <li>Подпункт 3</li>
