--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="styles.css" rel="stylesheet">
 <link href="colorstyles.css" rel="stylesheet">
 <link href="iconstyles.css" rel="stylesheet">
+<link href="blockwatchstyles.css" rel="stylesheet">
+<link href="smartphonestyles.css" rel="stylesheet">
 
 </head>
 
@@ -107,7 +109,7 @@
 
 </div>
 
-<p class="display-p">Сайт не поддерживается на экранах с шириной меньше 300 пикселей</p>
+<div class="block-watch"><p>Сайт не поддерживается на экранах с шириной меньше 300 пикселей</p></div>
 
 </body>
 </html>
