--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+<p class="paragraph bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+
 <div class="block-article">
 
 <h1 class="heading position-center">mavantuominen</h1>
@@ -87,7 +90,6 @@
 
 <p class="separator"></p>
 
-<div class="paragraph">
 <ul>
   <li>Первый пункт списка
     <ul>
@@ -99,7 +101,6 @@
   <li>Второй пункт списка</li>
   <li>Третий пункт списка</li>
 </ul>
-</div>
 
 <div class="div-buttons">
 <a class="a-button-white">menu</a>
