--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
 
-<p class="paragraph bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-
 <div class="block-article">
+
+<p class="paragraph bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <h1 class="heading position-center">mavantuominen</h1>
 
@@ -29,14 +29,14 @@
 
 <h1 class="heading"><span class="icon-mini-menu"></span> minu menu</h1>
 
-<p class="separator"></p>
+<hr class="separator">
 
 <h2 class="subtitle"><span class="icon-ul"></span> Информация</h2>
 <h2 class="subtitle"><span class="icon-ul"></span> Скиллы</h2>
 <h2 class="subtitle"><span class="icon-ul"></span> Социальные сети</h2>
 <h2 class="subtitle"><span class="icon-ul"></span> Мои фотогрфии</h2>
 
-<p class="separator"></p>
+<hr class="separator">
 
 <!-- .............................. -->
 
@@ -56,7 +56,7 @@
 
 </div>
 
-<p class="separator"></p>
+<hr class="separator">
 
 <!-- .............................. -->
 
@@ -76,7 +76,7 @@
 
 <!-- .............................. -->
 
-<p class="separator"></p>
+<hr class="separator">
 
 <img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
 
@@ -108,6 +108,11 @@
 <a class="a-button-white">menu</a>
 </div>
 
+</div>
+
+<div class="background-color-f5deb3 color-block">
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
 <div class="block-watch"><p>Сайт не поддерживается на экранах с шириной меньше 300 пикселей</p></div>
