--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
 <h1 class="heading"><span class="icon-mini-menu"></span> minu menu</h1>
 
-<hr class="separator">
+<p class="separator"></p>
 
 <h2 class="subtitle"><span class="icon-ul"></span> Информация</h2>
 <h2 class="subtitle"><span class="icon-ul"></span> Скиллы</h2>
 <h2 class="subtitle"><span class="icon-ul"></span> Социальные сети</h2>
 <h2 class="subtitle"><span class="icon-ul"></span> Мои фотогрфии</h2>
 
-<hr class="separator">
+<p class="separator"></p>
 
 <!-- .............................. -->
 
@@ -56,7 +56,7 @@
 
 </div>
 
-<hr class="separator">
+<p class="separator"></p>
 
 <!-- .............................. -->
 
@@ -76,7 +76,7 @@
 
 <!-- .............................. -->
 
-<hr class="separator">
+<p class="separator"></p>
 
 <img src="5955ad19c9962c4cb7b51deb06004993.gif" class="photo">
 
