--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 <div class="block-article">
 
-<p class="paragraph bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
-
 <h1 class="heading position-center">mavantuominen</h1>
 
 <div class="background-color-f5deb3 color-block">
@@ -102,16 +100,22 @@
   <li>Третий пункт списка</li>
 </ul>
 
-<div class="div-buttons">
-<a class="a-button-white">menu</a>
-<a class="a-button-white">menu</a>
-<a class="a-button-white">menu</a>
+<div class="bbl2">
+<a class="a-button">menu</a>
+<a class="a-button">menu</a>
+<a class="a-button">menu ggggggggggggg hhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjj</a>
+<a class="a-button">menu</a>
+<a class="a-button">menu</a>
+<a class="a-button">menu ggggggggggggg hhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjj</a>
 </div>
+
+<p class="paragraph bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 </div>
 
 <div class="background-color-f5deb3 color-block">
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
