--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <body>
 
+<p class="bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+
 <div class="block-article">
 
 <h1 class="heading position-center">mavantuominen</h1>
@@ -108,8 +110,6 @@
 <a class="a-button">menu</a>
 <a class="a-button">menu ggggggggggggg hhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjj</a>
 </div>
-
-<p class="paragraph bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 </div>
 
