--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
 
 <body>
 
-<p class="bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+<div class="background-color-f5deb3 color-block">
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+</div>
+
+<div class="conte">
+
+<p class="bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру.</p>
 
 <div class="block-article">
 
@@ -72,6 +87,19 @@
 
 </div>
 
+<div class="columns">
+
+<div class="column">
+<p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+</div>
+
+<div class="column">
+<p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
+</div>
+
+</div>
+
+
 <p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
 <!-- .............................. -->
@@ -90,32 +118,35 @@
 
 <p class="separator"></p>
 
-<ul>
-  <li>Первый пункт списка
-    <ul>
-      <li>Подпункт 1</li>
-      <li>Подпункт 2</li>
-      <li>Подпункт 3</li>
-    </ul>
-  </li>
-  <li>Второй пункт списка</li>
-  <li>Третий пункт списка</li>
+<ul class="block-article-list">
+  <li class="block-article-list-li">Первый пункт списка</li>
+  <li class="block-article-list-li">Второй пункт списка</li>
+  <li class="block-article-list-li">Третий пункт списка</li>
 </ul>
 
-<div class="bbl2">
+<ol class="block-article-list">
+  <li class="block-article-list-ol">Первый пункт списка</li>
+  <li class="block-article-list-ol">Второй пункт списка</li>
+  <li class="block-article-list-ol">Третий пункт списка</li>
+</ol>
+
 <a class="a-button">menu</a>
 <a class="a-button">menu</a>
 <a class="a-button">menu ggggggggggggg hhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjj</a>
 <a class="a-button">menu</a>
 <a class="a-button">menu</a>
 <a class="a-button">menu ggggggggggggg hhhhhhhhhhhhhhhhh jjjjjjjjjjjjjjjj</a>
+
 </div>
 
 </div>
 
 <div class="background-color-f5deb3 color-block">
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
+<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
