--- a/index.html
+++ b/index.html
@@ -15,22 +15,9 @@
 
 <body>
 
-<div class="background-color-f5deb3 color-block">
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-<p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
-</div>
-
 <div class="block-article">
 
-<p class="bbl">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру.</p>
+<p class="bbl">Навверх</p>
 
 <h1 class="heading position-center">mavantuominen</h1>
 
