--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 <div class="block-article">
 
-<p class="bbl">Навверх</p>
-
 <h1 class="heading position-center">mavantuominen</h1>
 
 <div class="background-color-f5deb3 color-block">
@@ -56,6 +54,12 @@
 
 </div>
 
+</div>
+
+<p class="bbl">Навверх</p>
+
+<div class="background-color-f1f1f1 color-block">
+
 <p class="separator"></p>
 
 <!-- .............................. -->
@@ -83,7 +87,6 @@
 </div>
 
 </div>
-
 
 <p class="paragraph">Аниме - это удивительный мир искусства и фантазии, который способен захватить сердца миллионов людей по всему миру. Каждая анимационная серия предлагает нам уникальные истории, захватывающие приключения и ярких персонажей, которые становятся как родными. В мире аниме мы можем отправиться в удивительные путешествия по времени и пространству, побывать в магических мирах фэнтези и столкнуться с сильными эмоциями и чувствами.</p>
 
