--- a/index.html
+++ b/index.html
@@ -23,40 +23,23 @@
 <p class="paragraph rules" id="p1">Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
 
-<div class="background-color-f1f1f1 color-block">
+<div class="navigation">
 
 <h1 class="heading"><span class="icon-mini-menu"></span> minu menu</h1>
 
-<p class="separator"></p>
-
-<h2 class="subtitle"><span class="icon-ul"></span> Информация</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Скиллы</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Социальные сети</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Мои фотогрфии</h2>
-
-<p class="separator"></p>
-
-<!-- .............................. -->
-
-<div class="columns">
-
-<div class="column">
-<h2 class="subtitle"><span class="icon-ul"></span> Фото</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Друзья</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Блоги</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Информация</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Скиллы</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Социальные сети</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Мои фотогрфии</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Фото</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Друзья</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Блоги</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Видео</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Клипы</h2>
+<h2 class="navigation-heading"><span class="icon-ul"></span> Гифы</h2>
 </div>
 
-<div class="column">
-<h2 class="subtitle"><span class="icon-ul"></span> Видео</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Клипы</h2>
-<h2 class="subtitle"><span class="icon-ul"></span> Гифы</h2>
-</div>
-
-</div>
-
-</div>
-
-<p class="bbl">Навверх</p>
+<p class="navigation-back">Навверх</p>
 
 <div class="background-color-f1f1f1 color-block">
 
