--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta charset="UTF-8">
   <title>mavantuominen</title>
   <link rel="stylesheet" href="styles.css">
@@ -33,6 +33,8 @@
 <div class="section-article-color">
 <p>Привет! Вы попали в мою статью-визитку где собрана вся информация про меня. Мои социальные сети, информация про меня, мои любимые игры, аниме, музыка. Полезные вещи такие как: всё о ботах, приложения и сайты.</p>
 </div>
+
+<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="mavantuominenblog/239" data-width="70%" data-userpic="true" data-color="CA9C0E" data-dark-color="F0B138"></script>
 
 <!-- ====================================================== -->
 
